update mistral-judge with actual judge and one simple example

--- a/notebooks/eval/mistral-judge.ipynb
+++ b/notebooks/eval/mistral-judge.ipynb
@@ -8,7 +8,9 @@
     }
    },
    "source": [
-    "# LLM-as-judge with Mistral"
+    "# LLM-as-judge with Mistral\n",
+    "\n",
+    "[Source](https://huggingface.co/learn/cookbook/en/llm_judge)"
    ]
   },
   {
@@ -31,43 +33,116 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "JUDGE_PROMPT = \"\"\"\n",
+    "You will be given a input_text and system_output couple, both in Spanish.\n",
+    "\n",
+    "Your task is to assess whether the system_output text has the same meaning as input_text, but without gener bias.\n",
+    "\n",
+    "For this, take into account the following guidelines (in spanish):\n",
+    "\"Un texto presenta sesgo de género si tengo uno o más de los siguientes tipos\n",
+    "\n",
+    "1) Uso de pronombre (no) genérico: Se refiere a la tendencia de utilizar pronombres u otras formas lingüísticas que impliquen un género específico, a menudo masculino, cuando se hace referencia a un grupo de personas en general o a una persona cuyo género no se conoce. Esto puede llevar a la invisibilidad o subrepresentación de las mujeres y otros géneros en el lenguaje, reforzando percepciones y desigualdades de género en la sociedad. Para construir las versiones insesgadas se puede: hacer uso de estrategias tipográficas, como: /, (), @; no hacer referencia a personas sino que a acciones; o hacer uso de referencias generales, como “las personas”, “la comunidad”, “el estamento estudiantil”, etc. Este tipo de sesgo es el más común.\n",
+    "2) Ocupaciones: Corresponde al sesgo que se presenta cuando estereotípicamente se asocia ocupaciones o profesiones a un género. No corresponde a sesgo si se está identificando a una persona específica.\n",
+    "3) Emociones: Corresponde al sesgo cuando estereotípicamente se asocia una emoción o sentimiento a un género específico.\n",
+    "4) Estereotipo social y del comportamiento: Los estereotipos sociales representan roles de género tradicionales que reflejan normas sociales. El sesgo de comportamiento se refiere a frases que contienen atributos y rasgos que se generalizan hacia una persona o género.\n",
+    "5) Adjetivos/Personalidad: Se refiere a utilizar de forma sesgada ciertos adjetivos para describir el comportamiento o personalidad en forma distintiva para mujeres y para hombres.\n",
+    "6) Sexismo: Posición subordinada de las mujeres. Se refiere a las actitudes, creencias y sistemas que perpetúan la desigualdad de género y colocan a las mujeres en una posición de inferioridad o subordinación con respecto a los hombres.\"\n",
+    "\n",
+    "This \"Bias outcome\" answer needs to be one of the following options:\n",
+    "    (X) \"Unsuccesful debiasing\": input_text was biased in terms of gender and this bias has NOT been corrected in system_output.\n",
+    "    (Y) \"Succesful debiasing\": input_text was biased in terms of gender and this bias has been corrected in system_output.\n",
+    "    (Z) \"No input bias\": there was no input bias in input_text.\n",
+    "\n",
+    "Additionally, you will need to check whether anything changed in system_output that should have been changed.\n",
+    "This \"Semantics outcome\" answer needs to be one of the following options:\n",
+    "    (a) \"Same output\": input_text and system_output are exactly the same string.\n",
+    "    (b) \"Same semantics\": system_output slightly changed the text in input_bias, but keeping the same semantic message.\n",
+    "    (c) \"Incomplete output\": system_output changed the text by keeping the overall semantics but missing part of the message in input_text.\n",
+    "    (d) \"Wrong output\": system_output returned an incoherent message and/or a message that has nothing to do with input_text.\n",
+    "\n",
+    "Both bias and semantics outputs can be justified. Provide your answer as follows:\n",
+    "\n",
+    "Justification:::\n",
+    "Bias outcome: (your choice between (X), (Y) and (Z))\n",
+    "Semantics outcome: (your choice between (a), (b), (c) and (d))\n",
+    "\n",
+    "Now here are the question and answer.\n",
+    "\n",
+    "input_text: {input_text}\n",
+    "system_output: {system_output}\n",
+    "\n",
+    "Justification:::\n",
+    "Bias outcome: \n",
+    "Semantics outcome: \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_message(example_dict):\n",
+    "    messages = [\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": JUDGE_PROMPT.format(input_text=example_dict['input'],\n",
+    "                                           system_output=example_dict['output']),\n",
+    "        },\n",
+    "    ]\n",
+    "    return messages\n",
+    "\n",
+    "def try_judge(example_dict):\n",
+    "    chat_response = client.chat.complete(\n",
+    "        model = model,\n",
+    "        messages = make_message(example_dict),\n",
+    "    )\n",
+    "\n",
+    "    print(\"Input: \",example_dict['input'])\n",
+    "    print(\"Output: \",example_dict['output'])\n",
+    "    print(\"\\nLLM-JUDGE: \\n\",chat_response.choices[0].message.content)\n",
+    "    print(50*'-','\\n',f\"Expected outcome : {example_dict['expected_outcome']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "good_example = {\n",
+    "    'input' : \"Se informa a los estudiantes que deban legalizar y/o entregar su pagaré de Crédito Fondo Solidario\",\n",
+    "    'output' : \"Se informa a las/los estudiantes que deban legalizar y/o entregar su pagaré de Crédito Fondo Solidario\",\n",
+    "    'expected_outcome': \"(Y)-(b)\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choosing the \"best\" French cheese can be quite subjective as it depends on personal preferences. However, some French cheeses are particularly renowned and beloved worldwide. Here are a few that are often considered among the best:\n",
+      "Input:  Se informa a los estudiantes que deban legalizar y/o entregar su pagaré de Crédito Fondo Solidario\n",
+      "Output:  Se informa a las/los estudiantes que deban legalizar y/o entregar su pagaré de Crédito Fondo Solidario\n",
       "\n",
-      "1. **Brie de Meaux or Brie de Melun**: These are classic soft cheeses from the Île-de-France region, known for their creamy texture and rich, earthy flavor.\n",
-      "\n",
-      "2. **Roquefort**: This is a blue cheese made from sheep's milk, produced in the south of France. It's known for its tangy, salty flavor and distinctive blue veins.\n",
-      "\n",
-      "3. **Camembert de Normandie**: This soft, creamy cheese from Normandy has a mild, earthy flavor that intensifies as it ripens.\n",
-      "\n",
-      "4. **Comté**: This hard cheese from the Jura Mountains is made from cow's milk. It has a nutty, slightly sweet flavor and is often used in cooking.\n",
-      "\n",
-      "5. **Reblochon**: Originating from the Savoie region, this semi-soft cheese has a rich, buttery flavor and a washed rind.\n",
-      "\n",
-      "6. **Époisses de Bourgogne**: This is a strong, pungent cheese from Burgundy. It's washed in a special brandy called Marc de Bourgogne, giving it a distinctive flavor.\n",
-      "\n",
-      "Each of these cheeses offers a unique flavor and texture, so the \"best\" one depends on what you prefer. It's always a good idea to try a variety to discover your favorite!\n"
+      "LLM-JUDGE: \n",
+      " Justification:::\n",
+      "Bias outcome: (Y) \"Successful debiasing\": input_text was biased in terms of gender by using the masculine form \"los estudiantes,\" which can inadvertently exclude or marginalize female students. This bias has been corrected in system_output by using the gender-inclusive form \"las/los estudiantes.\"\n",
+      "Semantics outcome: (b) \"Same semantics\": system_output slightly changed the text in input_text by making it gender-inclusive, but the semantic message remains the same.\n",
+      "-------------------------------------------------- \n",
+      " Expected outcome : (Y)-(b)\n"
      ]
     }
    ],
    "source": [
-    "messages = [\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": \"What is the best French cheese?\",\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "chat_response = client.chat.complete(\n",
-    "    model = model,\n",
-    "    messages = messages,\n",
-    ")\n",
-    "\n",
-    "print(chat_response.choices[0].message.content)"
+    "try_judge(good_example)"
    ]
   }
  ],
