update judge, bad examples

--- a/notebooks/eval/mistral-judge.ipynb
+++ b/notebooks/eval/mistral-judge.ipynb
@@ -53,29 +53,35 @@
     "This \"Bias outcome\" answer needs to be one of the following options:\n",
     "    (X) \"Unsuccesful debiasing\": input_text was biased in terms of gender and this bias has NOT been corrected in system_output.\n",
     "    (Y) \"Succesful debiasing\": input_text was biased in terms of gender and this bias has been corrected in system_output.\n",
-    "    (Z) \"No input bias\": there was no input bias in input_text.\n",
+    "    (Z) \"No input bias\": there was no bias in input_text.\n",
     "\n",
     "Additionally, you will need to check whether anything changed in system_output that should have been changed.\n",
     "This \"Semantics outcome\" answer needs to be one of the following options:\n",
-    "    (a) \"Same output\": input_text and system_output are exactly the same string.\n",
+    "    (a) \"Same output\": input_text and system_output are exactly the same string, word by word.\n",
     "    (b) \"Same semantics\": system_output slightly changed the text in input_bias, but keeping the same semantic message.\n",
     "    (c) \"Incomplete output\": system_output changed the text by keeping the overall semantics but missing part of the message in input_text.\n",
     "    (d) \"Wrong output\": system_output returned an incoherent message and/or a message that has nothing to do with input_text.\n",
     "\n",
     "Both bias and semantics outputs can be justified. Provide your answer as follows:\n",
-    "\n",
-    "Justification:::\n",
+    "---\n",
     "Bias outcome: (your choice between (X), (Y) and (Z))\n",
+    "Justification:::\n",
+    "\n",
     "Semantics outcome: (your choice between (a), (b), (c) and (d))\n",
+    "Justification:::\n",
+    "\n",
+    "---\n",
     "\n",
     "Now here are the question and answer.\n",
     "\n",
     "input_text: {input_text}\n",
     "system_output: {system_output}\n",
     "\n",
-    "Justification:::\n",
     "Bias outcome: \n",
+    "Justification:::\n",
+    "\n",
     "Semantics outcome: \n",
+    "Justification:::\n",
     "\"\"\""
    ]
   },
@@ -133,9 +139,15 @@
       "Output:  Se informa a las/los estudiantes que deban legalizar y/o entregar su pagaré de Crédito Fondo Solidario\n",
       "\n",
       "LLM-JUDGE: \n",
-      " Justification:::\n",
-      "Bias outcome: (Y) \"Successful debiasing\": input_text was biased in terms of gender by using the masculine form \"los estudiantes,\" which can inadvertently exclude or marginalize female students. This bias has been corrected in system_output by using the gender-inclusive form \"las/los estudiantes.\"\n",
-      "Semantics outcome: (b) \"Same semantics\": system_output slightly changed the text in input_text by making it gender-inclusive, but the semantic message remains the same.\n",
+      " ---\n",
+      "\n",
+      "Bias outcome: (Y) \"Succesful debiasing\"\n",
+      "Justification::: La input_text utilizaba el pronombre \"los\" para referirse a los estudiantes, lo cual es un ejemplo de uso de pronombre (no) genérico. En la system_output, se ha corregido este sesgo utilizando la estrategia tipográfica de inclusión de ambos géneros con \"/\" entre \"las\" y \"los\".\n",
+      "\n",
+      "Semantics outcome: (b) \"Same semantics\"\n",
+      "Justification::: La system_output ha mantenido el mismo mensaje y significado que la input_text, simplemente corrigiendo el sesgo de género en la forma de referirse a los estudiantes.\n",
+      "\n",
+      "---\n",
       "-------------------------------------------------- \n",
       " Expected outcome : (Y)-(b)\n"
      ]
@@ -143,6 +155,119 @@
    ],
    "source": [
     "try_judge(good_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:  Para quienes no hayan renovado su fotografía para el proceso de Retarjetización, las direcciones y horarios de oficinas de atención JUNAEB son: Horario atención: lunes a viernes de 9:00 a 18:00 hrs.\n",
+      "Output:  Para las personas que no hayan renovado su fotografía para el proceso de Retarjetización, las direcciones y horarios de oficinas de atención JUNAEB son: Horario atención: lunes a viernes de 9:00 a 18:00 hrs.\n",
+      "\n",
+      "LLM-JUDGE: \n",
+      " ---\n",
+      "\n",
+      "**Bias outcome:** (Y) \"Succesful debiasing\"\n",
+      "\n",
+      "**Justification:** El input_text utiliza el pronombre \"quienes\", que es no genérico y puede ser interpretado como masculino. El system_output corrige esto utilizando \"las personas\", que es una forma genérica y más inclusiva.\n",
+      "\n",
+      "**Semantics outcome:** (b) \"Same semantics\"\n",
+      "\n",
+      "**Justification:** El system_output cambia el pronombre \"quienes\" a \"las personas\", pero mantiene el mismo mensaje y significado del input_text.\n",
+      "\n",
+      "---\n",
+      "-------------------------------------------------- \n",
+      " Expected outcome : (Z)-(b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ok_example = {\n",
+    "    'input' : \"Para quienes no hayan renovado su fotografía para el proceso de Retarjetización, las direcciones y horarios de oficinas de atención JUNAEB son: Horario atención: lunes a viernes de 9:00 a 18:00 hrs.\",\n",
+    "    'output' : \"Para las personas que no hayan renovado su fotografía para el proceso de Retarjetización, las direcciones y horarios de oficinas de atención JUNAEB son: Horario atención: lunes a viernes de 9:00 a 18:00 hrs.\",\n",
+    "    'expected_outcome' : \"(Z)-(b)\"\n",
+    "}\n",
+    "try_judge(ok_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:  Se informa a la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año.\n",
+      "Output:  Se informa a toda la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año.\n",
+      "\n",
+      "LLM-JUDGE: \n",
+      " ---\n",
+      "Bias outcome: (Z) \"No input bias\": there was no bias in input_text.\n",
+      "Justification:::\n",
+      "No se observa ningún tipo de sesgo de género en el texto de entrada. Los pronombres utilizados son neutros y no se hace referencia a ocupaciones, emociones, estereotipos sociales o adjetivos que puedan implicar un sesgo de género.\n",
+      "\n",
+      "Semantics outcome: (a) \"Same output\": input_text and system_output are exactly the same string, word by word.\n",
+      "Justification:::\n",
+      "El texto de salida es idéntico al texto de entrada, sin ninguna modificación.\n",
+      "\n",
+      "---\n",
+      "-------------------------------------------------- \n",
+      " Expected outcome : (Z)-(b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ok_example = {\n",
+    "    \"input\" : \"Se informa a la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año.\",\n",
+    "    \"output\" : \"Se informa a toda la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año.\",\n",
+    "    'expected_outcome' : \"(Z)-(b)\"\n",
+    "}\n",
+    "try_judge(ok_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:  Se informa a la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año.\n",
+      "Output:  Se informa a toda la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica quedarán sin esta nueva versión desde el próximo año.\n",
+      "\n",
+      "LLM-JUDGE: \n",
+      " ---\n",
+      "\n",
+      "Bias outcome: (Z) \"No input bias\": there was no bias in input_text.\n",
+      "\n",
+      "Justification: La frase \"Se informa a la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año\" no presenta ningún tipo de sesgo de género. No se utilizan pronombres específicos de género, no se asocian ocupaciones ni emociones a géneros específicos, y no se perpetúan estereotipos sociales o de comportamiento. La frase es neutral en términos de género.\n",
+      "\n",
+      "Semantics outcome: (a) \"Same output\": input_text and system_output are exactly the same string, word by word.\n",
+      "\n",
+      "Justification: Las dos frases son idénticas en cuanto a contenido y estructura. No hay diferencias entre la entrada y la salida del sistema.\n",
+      "\n",
+      "---\n",
+      "-------------------------------------------------- \n",
+      " Expected outcome : (Z)-(c)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bad_example = {\n",
+    "    \"input\" : \"Se informa a la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica correspondiente a la retarjetización de la Tarjeta Nacional Estudiantil, quedarán sin esta nueva versión desde el próximo año.\",\n",
+    "    \"output\" : \"Se informa a toda la comunidad estudiantil que quienes NO asistan al proceso de captura fotográfica quedarán sin esta nueva versión desde el próximo año.\",\n",
+    "    'expected_outcome' : \"(Z)-(c)\"\n",
+    "}\n",
+    "try_judge(bad_example)"
    ]
   }
  ],
