update bertscore LLM with results

--- a/notebooks/eval/bertscore-LLM.ipynb
+++ b/notebooks/eval/bertscore-LLM.ipynb
@@ -38,7 +38,7 @@
        "      <th>input</th>\n",
        "      <th>biases_detected</th>\n",
        "      <th>scores</th>\n",
-       "      <th>output</th>\n",
+       "      <th>output_agent</th>\n",
        "      <th>index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -95,7 +95,7 @@
        "3                                    ¡Les esperamos!            UNBIASED   \n",
        "4  Estimada Comunidad:   La Subdirección de Puebl...  EXCLUSIONARY_TERMS   \n",
        "\n",
-       "  scores                                             output  index  \n",
+       "  scores                                       output_agent  index  \n",
        "0    1.0                                           UNBIASED      0  \n",
        "1    0.8  Desde hoy y hasta el 19 de diciembre puedes de...      1  \n",
        "2    1.0                                           UNBIASED      2  \n",
@@ -113,13 +113,22 @@
     "\n",
     "df = pd.read_csv(\"../agent/predictions.csv\")\n",
     "df = df.drop(columns=['debias_reasoning'])\n",
-    "df = df.rename(columns={\"biases\": \"biases_detected\"})\n",
+    "df = df.rename(columns={\"biases\": \"biases_detected\",\"output\":\"output_agent\"})\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['output'] = df.apply(lambda row: row['input'] if row['biases_detected'] == 'UNBIASED' else row['output_agent'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +137,7 @@
        "819"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +196,9 @@
        "      <th>input</th>\n",
        "      <th>biases_detected</th>\n",
        "      <th>scores</th>\n",
-       "      <th>output</th>\n",
+       "      <th>output_agent</th>\n",
        "      <th>index</th>\n",
+       "      <th>output</th>\n",
        "      <th>sesgo_pronombre</th>\n",
        "      <th>sesgo_otro</th>\n",
        "      <th>target</th>\n",
@@ -202,6 +212,7 @@
        "      <td>1.0</td>\n",
        "      <td>UNBIASED</td>\n",
        "      <td>0</td>\n",
+       "      <td>Estimada comunidad beauchefiana: ¿Tienes papel...</td>\n",
        "      <td>NO</td>\n",
        "      <td>NO</td>\n",
        "      <td>['Estimada comunidad beauchefiana: ¿Tienes pap...</td>\n",
@@ -213,6 +224,7 @@
        "      <td>0.8</td>\n",
        "      <td>Desde hoy y hasta el 19 de diciembre puedes de...</td>\n",
        "      <td>1</td>\n",
+       "      <td>Desde hoy y hasta el 19 de diciembre puedes de...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>['Desde hoy y hasta el 19 de diciembre puedes ...</td>\n",
@@ -224,6 +236,7 @@
        "      <td>1.0</td>\n",
        "      <td>UNBIASED</td>\n",
        "      <td>2</td>\n",
+       "      <td>Revisa en el afiche qué tipo de papeles puedes...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>['Revisa en el afiche qué tipo de papeles pued...</td>\n",
@@ -235,6 +248,7 @@
        "      <td>0.8</td>\n",
        "      <td>Estimada Comunidad:   La Subdirección de Puebl...</td>\n",
        "      <td>4</td>\n",
+       "      <td>Estimada Comunidad:   La Subdirección de Puebl...</td>\n",
        "      <td>NO</td>\n",
        "      <td>NO</td>\n",
        "      <td>['Estimada Comunidad:   La Subdirección de Pue...</td>\n",
@@ -246,6 +260,7 @@
        "      <td>1.0</td>\n",
        "      <td>UNBIASED</td>\n",
        "      <td>5</td>\n",
+       "      <td>Postulaciones, labores y más información en:  ...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>['Postulaciones, labores y más información en:...</td>\n",
@@ -262,35 +277,59 @@
        "3  Estimada Comunidad:   La Subdirección de Puebl...  EXCLUSIONARY_TERMS   \n",
        "4  Postulaciones, labores y más información en:  ...            UNBIASED   \n",
        "\n",
-       "  scores                                             output  index  \\\n",
+       "  scores                                       output_agent  index  \\\n",
        "0    1.0                                           UNBIASED      0   \n",
        "1    0.8  Desde hoy y hasta el 19 de diciembre puedes de...      1   \n",
        "2    1.0                                           UNBIASED      2   \n",
        "3    0.8  Estimada Comunidad:   La Subdirección de Puebl...      4   \n",
        "4    1.0                                           UNBIASED      5   \n",
        "\n",
-       "  sesgo_pronombre sesgo_otro  \\\n",
-       "0              NO         NO   \n",
-       "1             NaN        NaN   \n",
-       "2             NaN        NaN   \n",
-       "3              NO         NO   \n",
-       "4             NaN        NaN   \n",
+       "                                              output sesgo_pronombre  \\\n",
+       "0  Estimada comunidad beauchefiana: ¿Tienes papel...              NO   \n",
+       "1  Desde hoy y hasta el 19 de diciembre puedes de...             NaN   \n",
+       "2  Revisa en el afiche qué tipo de papeles puedes...             NaN   \n",
+       "3  Estimada Comunidad:   La Subdirección de Puebl...              NO   \n",
+       "4  Postulaciones, labores y más información en:  ...             NaN   \n",
        "\n",
-       "                                              target  \n",
-       "0  ['Estimada comunidad beauchefiana: ¿Tienes pap...  \n",
-       "1  ['Desde hoy y hasta el 19 de diciembre puedes ...  \n",
-       "2  ['Revisa en el afiche qué tipo de papeles pued...  \n",
-       "3  ['Estimada Comunidad:   La Subdirección de Pue...  \n",
-       "4  ['Postulaciones, labores y más información en:...  "
+       "  sesgo_otro                                             target  \n",
+       "0         NO  ['Estimada comunidad beauchefiana: ¿Tienes pap...  \n",
+       "1        NaN  ['Desde hoy y hasta el 19 de diciembre puedes ...  \n",
+       "2        NaN  ['Revisa en el afiche qué tipo de papeles pued...  \n",
+       "3         NO  ['Estimada Comunidad:   La Subdirección de Pue...  \n",
+       "4        NaN  ['Postulaciones, labores y más información en:...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 692, 7: 14, 6: 14, 8: 13, 5: 6, 2: 5, 4: 2, 3: 2})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "from collections import Counter\n",
+    "\n",
+    "df['target'] = df['target'].apply(lambda text: ast.literal_eval(text))\n",
+    "Counter([len(t) for t in df['target']])"
    ]
   },
   {
@@ -304,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,21 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'evaluate'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mevaluate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load\n\u001b[1;32m      2\u001b[0m bertscore \u001b[38;5;241m=\u001b[39m load(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbertscore\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'evaluate'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from evaluate import load\n",
     "bertscore = load(\"bertscore\")"
@@ -336,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,97 +387,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that the target either keeps the original text or corrects the bias in one of the several possible ways. We will separate the dataframe in a way that each one of them becomes a separate candidate for the evaluation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.explode('target', ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = bertscore.compute(predictions=df['output'], references=df['target'], model_type=\"bert-base-multilingual-cased\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['precision'] = results['precision']\n",
+    "df['recall'] = results['recall']\n",
+    "df['f1'] = results['f1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                                    NaN\n",
-       "1                                                    NaN\n",
-       "2      Unidad de Calidad de Vida Estudiantil les invi...\n",
-       "3      Es necesario el compromiso de acompañar a una/...\n",
-       "4                                                    NaN\n",
-       "                             ...                        \n",
-       "943                                                  NaN\n",
-       "944                                                  NaN\n",
-       "945                                                  NaN\n",
-       "946    El Centro de Estudiantes de Ingeniería (CEI) l...\n",
-       "947                                                  NaN\n",
-       "Name: version_sin_sesgo, Length: 948, dtype: object"
+       "1032"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df['version_sin_sesgo']"
+    "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "333\n"
-     ]
-    }
-   ],
-   "source": [
-    "merged_df = merged_df.dropna(subset=['version_sin_sesgo'])\n",
-    "print(len(merged_df))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = bertscore.compute(predictions=list(merged_df['output']), references=list(merged_df['version_sin_sesgo']), model_type=\"bert-base-multilingual-cased\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_df['precision'] = results['precision']\n",
-    "merged_df['recall'] = results['recall']\n",
-    "merged_df['f1'] = results['f1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "333"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(merged_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,28 +471,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "333"
+       "748"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_results = filter_best_scores(merged_df, 'index', 'f1')\n",
+    "df_results = filter_best_scores(df, 'index', 'f1')\n",
     "len(df_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -506,16 +500,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean: 0.8309580647909606\n",
-      "\tstd: 0.16464016886510133\n",
+      "\tmean: 0.9269657409127383\n",
+      "\tstd: 0.1404723116821046\n",
       "\n",
       "recall \n",
-      "\tmean: 0.7824891748371067\n",
-      "\tstd: 0.20287524738079862\n",
+      "\tmean: 0.9108940684460701\n",
+      "\tstd: 0.16598013810188506\n",
       "\n",
       "f1 \n",
-      "\tmean: 0.8046059384718314\n",
-      "\tstd: 0.1852749454425095\n",
+      "\tmean: 0.9183074265399719\n",
+      "\tstd: 0.1538533557165024\n",
       "\n"
      ]
     }
@@ -537,13 +531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "results_input = bertscore.compute(\n",
-    "    predictions=list(df_results['input']),\n",
-    "    references=list(df_results['version_sin_sesgo']), model_type=\"bert-base-multilingual-cased\")\n",
+    "    predictions=df_results['input'],\n",
+    "    references=df_results['target'], model_type=\"bert-base-multilingual-cased\")\n",
     "df_results['precision_input'] = results_input['precision']\n",
     "df_results['recall_input'] = results_input['recall']\n",
     "df_results['f1_input'] = results_input['f1']\n",
@@ -555,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -563,16 +557,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean (diff): -0.147619934948357\n",
-      "\tstd (diff): 0.16816722939475584\n",
+      "\tmean (diff): -0.0718283454842746\n",
+      "\tstd (diff): 0.14032722737511602\n",
       "\n",
       "recall \n",
-      "\tmean (diff): -0.1812424785024053\n",
-      "\tstd (diff): 0.2084570808405189\n",
+      "\tmean (diff): -0.0870099298377088\n",
+      "\tstd (diff): 0.16570363491985357\n",
       "\n",
       "f1 \n",
-      "\tmean (diff): -0.16638319252489564\n",
-      "\tstd (diff): 0.18992517879407717\n",
+      "\tmean (diff): -0.08003377404442445\n",
+      "\tstd (diff): 0.15364305554792193\n",
       "\n"
      ]
     }
